<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundframeinicial">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="295dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/frameimg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:textSize="35sp"
        android:rotation="-22"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="520dp"
        android:text="@string/prepare_the_popcorn_and"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:textAlignment="center"
        android:layout_marginTop="555dp"
        android:text="@string/enjoy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="315dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/FrameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="310dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:background="@drawable/framebutton" />

</FrameLayout>